src/main/java/com/example/airline/error/InvalidMessage.java
package com.example.airline.error;

public class InvalidMessage {
    public static final String INVALID_FIRST_LENGTH = "First name length must be between 3 and 20 characters!";
    public static final String INVALID_LAST_LENGTH = "Last name length must be between 3 and 20 characters!";
    public static final String INVALID_EMAIL = "Invalid email!";
    public static final String INVALID_EMAIL_EMPTY = "Email must not be empty!";
    public static final String INVALID_MESSAGE_EMPTY = "Message must not be empty!";
    public static final String INVALID_FULL_NAME_EMPTY = "Full name must not be empty!";

    public static final String INVALID_PASS_LENGTH = "Password length be between 3 and 20 characters!";
    public static final String INVALID_PHONE_NUMBER = "Phone number must not be empty!";
    public static final String INVALID_PRICE_EMPTY = "Price must not be empty!";
    public static final String INVALID_POSITIVE_PRICE = "Price must not be empty!";
    public static final String INVALID_DATE = "Date must be in future!";
    public static final String INVALID_DATE_EMPTY = "Date must not be null!";
    public static final String INVALID_ENUM = "Please select option.";
    public static final String INVALID_FLIGHT_NUMBER = "Flight number length be between 4 and 10 characters!";




}
